# QMEM

./: QMEM.sln  textTest.txt
QMEM/: .LearnWindow.cpp.kate-swp  .MyFrame.cpp.swp  CMakeLists.txt  CMakeSettings.json  DB_Manager.cpp  DB_Manager.h  EditText.cpp  EditText.h  LearnWindow.cpp  LearnWindow.h  MainFrame.cpp  MainFrame.h  MainWindow.cpp  MainWindow.h  MyFrame.cpp  MyFrame.h  QMEM.kdev4  QMEM.rc  QMEM.vcxproj  QMEM.vcxproj.filters  Qmem  Qmem.db  RCa22264  Results_Dlg.cpp  Results_Dlg.h  TextEntryWindow.cpp  TextEntryWindow.h  main.cpp  resource.h  resource1.h  text01.txt  textEntryDialog.cpp  textEntryDialog.h
QMEM/.kdev4/: QMEM.kdev4
QMEM/saved mems/: 13042020.txt  Ahmed.txt  DerAnfang.txt  Note on corona.txt  Page 02.txt  Page01  Page01.txt  aaa.txt  aaaaa.txt  adddd.txt  anyone.txt  asdfsdf.txt  daaaaaaaaa.txt  dd.txt  dfd.txt  dfsadfd.txt  eeee.txt  euro.txt  fff.txt  fsdfds.txt  howto.txt  howtolose.txt  lllll.txt  myname.txt  newMessage.txt  oooo.txt  qqq.txt  say.txt  test.txt  التغابن2.txt  الفاتحة.txt  النص الأول.txt  ييي.txt
qmemlinux/: CMakeCache.txt  Makefile  QMEM.project  QMEM.workspace  Qmem.db  cmake_install.cmake  qmemlinux.kdev4
qmemlinux/.codelite/: QMEM.tags  refactoring.db
qmemlinux/.kdev4/: qmemlinux.kdev4
qmemlinux/saved mems/: Corona.txt
